表示されない

--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,5 +1,6 @@
 <div class="goal-title-area px-3">
   <h1>Goals</h1>
+  <!--//ここにpadding-right 5 を設定しました。-->
   <%= link_to new_goal_path, class: "btn p-0 text-dark pr-5", remote: true do %>
     <i class="fas fa-plus align-middle pr-1"></i><span class="align-middle">Create A New Goal</span>
   <% end %>
