todo_app finish

--- a/app/views/goals/new.js.erb
+++ b/app/views/goals/new.js.erb
@@ -1,6 +1,6 @@
 $("#modalArea").html("<%= j(render 'form', goal: @goal) %>")
 
-// フォームにフォーカス
+<!--// フォームにフォーカス-->
 $("#modalArea").find(".modal").on('shown.bs.modal', () => {
     $("#modalArea").find("form input[type=text]")[0].focus();
 })
