--- a/app/views/tags/_focus_modal.js.erb
+++ b/app/views/tags/_focus_modal.js.erb
@@ -1,4 +1,4 @@
-// フォームにフォーカス
+<!--// フォームにフォーカス-->
 $("#modalArea").find(".modal").on('shown.bs.modal', () => {
   $("#modalArea").find("form input[type=text]").focus();
 })
